K8S/Services/User-management/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management
  namespace: fargate-dev
  labels:
    app: user-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      labels:
        app: user-management
    spec:
      containers:
        - name: user-management-service
          image: 703671921263.dkr.ecr.us-east-2.amazonaws.com/omp-eks-fargate/dev:latest
          imagePullPolicy: IfNotPresent
          command: ["sh", "-c"]
          args:
            - alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000
          ports:
            - containerPort: 8000
echo "# Trigger CI/CD" >> K8S/Services/User-management/Deployment.yaml
