K8S/Services/User-management/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-management-svc
  namespace: fargate-dev
spec:
  selector:
    app: user-management
  ports:
    - protocol: TCP     
      port: 80
      targetPort: 8000
  type: ClusterIP
